# SZ3_WASM

./: .gitignore  CMakeLists.txt
example/01_sz3/: index.html  sz3_wrapper.js  sz3_wrapper.wasm  test.js
example/02_webgl/: index.html  test.js
tools/wasmSZ3/: CMakeLists.txt  sz3_wrapper.cpp  sz3_wrapper.h
